# iomt-swarm-range

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
attacks/: __init__.py
attacks/injectors/: data_injection.py  dos_attack.py
attacks/scenarios/: scenario_runner.py
conf/: experiment.yaml
deploy/docker/: Dockerfile.device  device-entrypoint.sh  docker-compose.yml
deploy/docker/mosquitto/config/: mosquitto.conf
detection/detectors/: abc_detector.py  aco_router.py  pso_allocator.py
detection/features/: traffic_analyzer.py
devices/dicom_sim/: simulator.py
devices/ecg_monitor_sim/: simulator.py
devices/fhir_gateway_sim/: simulator.py
devices/infusion_pump_sim/: simulator.py
devices/vent_sim/: simulator.py
evaluation/benchmarks/: analyze_real_results.py  experiment_runner.py  integrated_experiments.py  publication_experiments.py  run_publication_experiments.py
evaluation/metrics/: detector_metrics.py
evaluation/results/: experiment_results_20251025_001435.json  summary_analysis.json
scripts/: mqtt_collector.py
swarm/abc/: algorithm.py
swarm/aco/: algorithm.py
swarm/pso/: algorithm.py
tests/unit/: test_abc.py  test_aco.py  test_dicom.py  test_ecg_monitor.py  test_fhir_gateway.py  test_infusion_pump.py  test_pso.py  test_ventilator.py
training/dashboards/: dashboard.py  dashboard_debug.py
training/dashboards/templates/: dashboard.html
